Created script, showing prediction stats and distributions

--- a/src/EDA of test predictions.ipynb
+++ b/src/EDA of test predictions.ipynb
@@ -2,19 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "from os.path import join"
+    "from os.path import join\n",
+    "from typing import List, Union, Tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_DIR = '../input'\n",
+    "SUBMISSIONS_DIR = '../submissions'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_name = 'exp_train_02.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,533 +41,87 @@
      "output_type": "stream",
      "text": [
       "Number of samples in train: 33126\n",
-      "Train dictribution:\n"
+      "Target dictribution:\n",
+      "0    98.237034\n",
+      "1     1.762966\n",
+      "Name: target, dtype: float64\n",
+      "\n",
+      "Number of samples in submission: 10982\n",
+      "Target dictribution:\n",
+      "0    99.480969\n",
+      "1     0.519031\n",
+      "Name: target, dtype: float64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    98.237034\n",
-       "1     1.762966\n",
-       "Name: target, dtype: float64"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "INPUT_DIR = '../input'\n",
+    "def print_distribution_info(df: pd.DataFrame, target: str, name_of_df: str):\n",
+    "    print(f'Number of samples in {name_of_df}: {df.shape[0]}')\n",
+    "    print(f'Target dictribution:')\n",
+    "    print(df[target].apply(round).value_counts(normalize=True) * 100)\n",
+    "\n",
+    "\n",
     "train_df = pd.read_csv(join(INPUT_DIR, 'train.csv'))\n",
-    "print(f'Number of samples in train: {train_df.shape[0]}')\n",
-    "print('Train dictribution:')\n",
-    "train_df['target'].value_counts(normalize=True) * 100"
+    "submission_df = pd.read_csv(join(SUBMISSIONS_DIR, submission_name))\n",
+    "print_distribution_info(train_df, 'target', 'train')\n",
+    "print()\n",
+    "print_distribution_info(submission_df, 'target', 'submission')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SUBMISSIONS_DIR = '../submissions'\n",
-    "exp_name = 'exp_train_02'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of samples in test: 10982\n",
-      "Predicted test dictribution:\n"
+      "Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)\n",
+      "             Abs      % % of its class\n",
+      "[0, 0.05]  10057  91.58          92.05\n",
+      "[0, 0.1]   10430  94.97          95.47\n",
+      "[0, 0.15]  10599  96.51          97.02\n",
+      "[0, 0.2]   10712  97.54          98.05\n",
+      "[0, 0.5)   10925  99.48         100.00\n",
+      "[0.5, 1]      57   0.52         100.00\n",
+      "[0.8, 1]       5   0.05           8.77\n",
+      "[0.85, 1]      1   0.01           1.75\n",
+      "[0.9, 1]       0   0.00           0.00\n",
+      "[0.95, 1]      0   0.00           0.00\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    99.480969\n",
-       "1     0.519031\n",
-       "Name: target, dtype: float64"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "submission_df = pd.read_csv(join(SUBMISSIONS_DIR, f'{exp_name}.csv'))\n",
-    "print(f'Number of samples in test: {submission_df.shape[0]}')\n",
-    "print('Predicted test dictribution:')\n",
-    "submission_df['target'].apply(round).value_counts(normalize=True) * 100"
+    "def print_bins_distribution_info(df: pd.DataFrame, \n",
+    "                                 custom_bins: List[Tuple[int, Tuple[float, float]]]):\n",
+    "    rows = []\n",
+    "    class_0_df, class_1_df = df[df['target'] < 0.50], df[df['target'] >= 0.50]\n",
+    "    \n",
+    "    for i, (class_, custom_bin) in enumerate(custom_bins):\n",
+    "        class_df_len = class_0_df.shape[0] if class_ == 0 else class_1_df.shape[0]\n",
+    "        \n",
+    "        hist, _ = np.histogram(df['target'], bins=custom_bin)\n",
+    "        \n",
+    "        abs_val = hist[0]\n",
+    "        pct_val = round(abs_val / df.shape[0] * 100, 2)        \n",
+    "        pct_class_val = round(abs_val / class_df_len * 100, 2)\n",
+    "        \n",
+    "        rows.append([abs_val, f'{pct_val:.2f}', f'{pct_class_val:.2f}'])\n",
+    "\n",
+    "    indices = [str(custom_bin) for (class_, custom_bin) in custom_bins]\n",
+    "    indices[len(indices)//2-1] = '[0, 0.5)'\n",
+    "\n",
+    "    rows_df = pd.DataFrame(rows, index=indices, columns=['Abs', '%', '% of its class'])\n",
+    "\n",
+    "    print('Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)')\n",
+    "    print(rows_df)\n",
+    "\n",
+    "\n",
+    "custom_bins = [[0, [0, 0.05]], [0, [0, 0.10]], [0, [0, 0.15]], [0, [0, 0.20]], [0, [0, 0.50 - 1e-12]], \n",
+    "               [1, [0.50, 1]], [1, [0.80, 1]], [1, [0.85, 1]], [1, [0.90, 1]], [1, [0.95, 1]]]\n",
+    "print_bins_distribution_info(submission_df, custom_bins)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist, bin_edges = np.histogram(submission_df['target'], [0, .05, .1, .15, .2, .5, .8, .85, .90, .95, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([91.577, 3.396, 1.539, 1.029, 1.94, 0.474, 0.036, 0.009, 0.0, 0.0],\n",
-       " array([0.  , 0.05, 0.1 , 0.15, 0.2 , 0.5 , 0.8 , 0.85, 0.9 , 0.95, 1.  ]))"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[round(x / len(submission_df) * 100, 3) for x in hist], bin_edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist, bin_edges = np.histogram(submission_df['target'], [0, .5, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([99.481, 0.519], [10925, 57])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[round(x / len(submission_df) * 100, 3) for x in hist], [round(x , 3) for x in hist]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_name</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6730</th>\n",
-       "      <td>ISIC_6096565</td>\n",
-       "      <td>0.501545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4796</th>\n",
-       "      <td>ISIC_4416068</td>\n",
-       "      <td>0.504830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9288</th>\n",
-       "      <td>ISIC_8455665</td>\n",
-       "      <td>0.507174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1786</th>\n",
-       "      <td>ISIC_1694285</td>\n",
-       "      <td>0.507319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8745</th>\n",
-       "      <td>ISIC_7940557</td>\n",
-       "      <td>0.507772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1525</th>\n",
-       "      <td>ISIC_1460169</td>\n",
-       "      <td>0.513063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5243</th>\n",
-       "      <td>ISIC_4814164</td>\n",
-       "      <td>0.521416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>951</th>\n",
-       "      <td>ISIC_0945202</td>\n",
-       "      <td>0.521758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>ISIC_0470699</td>\n",
-       "      <td>0.530370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9171</th>\n",
-       "      <td>ISIC_8345288</td>\n",
-       "      <td>0.535157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10027</th>\n",
-       "      <td>ISIC_9105386</td>\n",
-       "      <td>0.540805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8811</th>\n",
-       "      <td>ISIC_8008539</td>\n",
-       "      <td>0.540965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3746</th>\n",
-       "      <td>ISIC_3520935</td>\n",
-       "      <td>0.544911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4096</th>\n",
-       "      <td>ISIC_3809896</td>\n",
-       "      <td>0.547116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2195</th>\n",
-       "      <td>ISIC_2078598</td>\n",
-       "      <td>0.551660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10141</th>\n",
-       "      <td>ISIC_9211310</td>\n",
-       "      <td>0.554271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8722</th>\n",
-       "      <td>ISIC_7917687</td>\n",
-       "      <td>0.563419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9703</th>\n",
-       "      <td>ISIC_8839128</td>\n",
-       "      <td>0.567894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7645</th>\n",
-       "      <td>ISIC_6935489</td>\n",
-       "      <td>0.569297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9169</th>\n",
-       "      <td>ISIC_8344285</td>\n",
-       "      <td>0.572426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3034</th>\n",
-       "      <td>ISIC_2828156</td>\n",
-       "      <td>0.573726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8796</th>\n",
-       "      <td>ISIC_7989840</td>\n",
-       "      <td>0.589988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4797</th>\n",
-       "      <td>ISIC_4416545</td>\n",
-       "      <td>0.591473</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7696</th>\n",
-       "      <td>ISIC_6981516</td>\n",
-       "      <td>0.606571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9398</th>\n",
-       "      <td>ISIC_8569603</td>\n",
-       "      <td>0.607801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7504</th>\n",
-       "      <td>ISIC_6805686</td>\n",
-       "      <td>0.625061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8865</th>\n",
-       "      <td>ISIC_8059429</td>\n",
-       "      <td>0.629169</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3125</th>\n",
-       "      <td>ISIC_2922450</td>\n",
-       "      <td>0.631884</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9417</th>\n",
-       "      <td>ISIC_8583322</td>\n",
-       "      <td>0.632414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>596</th>\n",
-       "      <td>ISIC_0637104</td>\n",
-       "      <td>0.633393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2168</th>\n",
-       "      <td>ISIC_2052123</td>\n",
-       "      <td>0.636874</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4624</th>\n",
-       "      <td>ISIC_4267994</td>\n",
-       "      <td>0.638615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1408</th>\n",
-       "      <td>ISIC_1364884</td>\n",
-       "      <td>0.647823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4462</th>\n",
-       "      <td>ISIC_4118006</td>\n",
-       "      <td>0.648392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7980</th>\n",
-       "      <td>ISIC_7233451</td>\n",
-       "      <td>0.653855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1757</th>\n",
-       "      <td>ISIC_1667159</td>\n",
-       "      <td>0.654217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7512</th>\n",
-       "      <td>ISIC_6814727</td>\n",
-       "      <td>0.655883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5704</th>\n",
-       "      <td>ISIC_5224960</td>\n",
-       "      <td>0.660443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2293</th>\n",
-       "      <td>ISIC_2170268</td>\n",
-       "      <td>0.665861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8078</th>\n",
-       "      <td>ISIC_7318419</td>\n",
-       "      <td>0.668923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5945</th>\n",
-       "      <td>ISIC_5423741</td>\n",
-       "      <td>0.673469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827</th>\n",
-       "      <td>ISIC_1727295</td>\n",
-       "      <td>0.674601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10935</th>\n",
-       "      <td>ISIC_9957368</td>\n",
-       "      <td>0.677323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6187</th>\n",
-       "      <td>ISIC_5659637</td>\n",
-       "      <td>0.679700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1334</th>\n",
-       "      <td>ISIC_1294368</td>\n",
-       "      <td>0.688024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5412</th>\n",
-       "      <td>ISIC_4965292</td>\n",
-       "      <td>0.715079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2116</th>\n",
-       "      <td>ISIC_2002073</td>\n",
-       "      <td>0.724169</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6851</th>\n",
-       "      <td>ISIC_6208151</td>\n",
-       "      <td>0.738803</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4332</th>\n",
-       "      <td>ISIC_4000026</td>\n",
-       "      <td>0.742689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10566</th>\n",
-       "      <td>ISIC_9612009</td>\n",
-       "      <td>0.743645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7898</th>\n",
-       "      <td>ISIC_7168654</td>\n",
-       "      <td>0.749332</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8061</th>\n",
-       "      <td>ISIC_7301931</td>\n",
-       "      <td>0.764931</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2739</th>\n",
-       "      <td>ISIC_2560699</td>\n",
-       "      <td>0.810852</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8863</th>\n",
-       "      <td>ISIC_8059373</td>\n",
-       "      <td>0.816037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4022</th>\n",
-       "      <td>ISIC_3736099</td>\n",
-       "      <td>0.840149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3045</th>\n",
-       "      <td>ISIC_2839742</td>\n",
-       "      <td>0.846921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5424</th>\n",
-       "      <td>ISIC_4975524</td>\n",
-       "      <td>0.854630</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         image_name    target\n",
-       "6730   ISIC_6096565  0.501545\n",
-       "4796   ISIC_4416068  0.504830\n",
-       "9288   ISIC_8455665  0.507174\n",
-       "1786   ISIC_1694285  0.507319\n",
-       "8745   ISIC_7940557  0.507772\n",
-       "1525   ISIC_1460169  0.513063\n",
-       "5243   ISIC_4814164  0.521416\n",
-       "951    ISIC_0945202  0.521758\n",
-       "390    ISIC_0470699  0.530370\n",
-       "9171   ISIC_8345288  0.535157\n",
-       "10027  ISIC_9105386  0.540805\n",
-       "8811   ISIC_8008539  0.540965\n",
-       "3746   ISIC_3520935  0.544911\n",
-       "4096   ISIC_3809896  0.547116\n",
-       "2195   ISIC_2078598  0.551660\n",
-       "10141  ISIC_9211310  0.554271\n",
-       "8722   ISIC_7917687  0.563419\n",
-       "9703   ISIC_8839128  0.567894\n",
-       "7645   ISIC_6935489  0.569297\n",
-       "9169   ISIC_8344285  0.572426\n",
-       "3034   ISIC_2828156  0.573726\n",
-       "8796   ISIC_7989840  0.589988\n",
-       "4797   ISIC_4416545  0.591473\n",
-       "7696   ISIC_6981516  0.606571\n",
-       "9398   ISIC_8569603  0.607801\n",
-       "7504   ISIC_6805686  0.625061\n",
-       "8865   ISIC_8059429  0.629169\n",
-       "3125   ISIC_2922450  0.631884\n",
-       "9417   ISIC_8583322  0.632414\n",
-       "596    ISIC_0637104  0.633393\n",
-       "2168   ISIC_2052123  0.636874\n",
-       "4624   ISIC_4267994  0.638615\n",
-       "1408   ISIC_1364884  0.647823\n",
-       "4462   ISIC_4118006  0.648392\n",
-       "7980   ISIC_7233451  0.653855\n",
-       "1757   ISIC_1667159  0.654217\n",
-       "7512   ISIC_6814727  0.655883\n",
-       "5704   ISIC_5224960  0.660443\n",
-       "2293   ISIC_2170268  0.665861\n",
-       "8078   ISIC_7318419  0.668923\n",
-       "5945   ISIC_5423741  0.673469\n",
-       "1827   ISIC_1727295  0.674601\n",
-       "10935  ISIC_9957368  0.677323\n",
-       "6187   ISIC_5659637  0.679700\n",
-       "1334   ISIC_1294368  0.688024\n",
-       "5412   ISIC_4965292  0.715079\n",
-       "2116   ISIC_2002073  0.724169\n",
-       "6851   ISIC_6208151  0.738803\n",
-       "4332   ISIC_4000026  0.742689\n",
-       "10566  ISIC_9612009  0.743645\n",
-       "7898   ISIC_7168654  0.749332\n",
-       "8061   ISIC_7301931  0.764931\n",
-       "2739   ISIC_2560699  0.810852\n",
-       "8863   ISIC_8059373  0.816037\n",
-       "4022   ISIC_3736099  0.840149\n",
-       "3045   ISIC_2839742  0.846921\n",
-       "5424   ISIC_4975524  0.854630"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "submission_df[submission_df['target'] >= 0.5].sort_values(by='target')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
