--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(33126, 8)\n"
+     "output_type": "stream",
+     "text": [
+      "(33126, 8)\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "     image_name  patient_id     sex  age_approx anatom_site_general_challenge  \\\n0  ISIC_2637011  IP_7279968    male        45.0                     head/neck   \n1  ISIC_0015719  IP_3075186  female        45.0               upper extremity   \n2  ISIC_0052212  IP_2842074  female        50.0               lower extremity   \n3  ISIC_0068279  IP_6890425  female        45.0                     head/neck   \n4  ISIC_0074268  IP_8723313  female        55.0               upper extremity   \n\n  diagnosis benign_malignant  target  \n0   unknown           benign       0  \n1   unknown           benign       0  \n2     nevus           benign       0  \n3   unknown           benign       0  \n4   unknown           benign       0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_name</th>\n      <th>patient_id</th>\n      <th>sex</th>\n      <th>age_approx</th>\n      <th>anatom_site_general_challenge</th>\n      <th>diagnosis</th>\n      <th>benign_malignant</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ISIC_2637011</td>\n      <td>IP_7279968</td>\n      <td>male</td>\n      <td>45.0</td>\n      <td>head/neck</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ISIC_0015719</td>\n      <td>IP_3075186</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>upper extremity</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ISIC_0052212</td>\n      <td>IP_2842074</td>\n      <td>female</td>\n      <td>50.0</td>\n      <td>lower extremity</td>\n      <td>nevus</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ISIC_0068279</td>\n      <td>IP_6890425</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>head/neck</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ISIC_0074268</td>\n      <td>IP_8723313</td>\n      <td>female</td>\n      <td>55.0</td>\n      <td>upper extremity</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age_approx</th>\n",
+       "      <th>anatom_site_general_challenge</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>benign_malignant</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ISIC_2637011</td>\n",
+       "      <td>IP_7279968</td>\n",
+       "      <td>male</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>head/neck</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ISIC_0015719</td>\n",
+       "      <td>IP_3075186</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>upper extremity</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ISIC_0052212</td>\n",
+       "      <td>IP_2842074</td>\n",
+       "      <td>female</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "      <td>nevus</td>\n",
+       "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ISIC_0068279</td>\n",
+       "      <td>IP_6890425</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>head/neck</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ISIC_0074268</td>\n",
+       "      <td>IP_8723313</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>upper extremity</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge  \\\n",
+       "0  ISIC_2637011  IP_7279968    male        45.0                     head/neck   \n",
+       "1  ISIC_0015719  IP_3075186  female        45.0               upper extremity   \n",
+       "2  ISIC_0052212  IP_2842074  female        50.0               lower extremity   \n",
+       "3  ISIC_0068279  IP_6890425  female        45.0                     head/neck   \n",
+       "4  ISIC_0074268  IP_8723313  female        55.0               upper extremity   \n",
+       "\n",
+       "  diagnosis benign_malignant  target  \n",
+       "0   unknown           benign       0  \n",
+       "1   unknown           benign       0  \n",
+       "2     nevus           benign       0  \n",
+       "3   unknown           benign       0  \n",
+       "4   unknown           benign       0  "
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -37,16 +141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "IP_4382720    115\nIP_7279968    115\nIP_4479736    115\nIP_4938382    115\nIP_0656529    114\n             ... \nIP_2516168      3\nIP_7471612      3\nIP_9460738      3\nIP_0147446      3\nIP_8335299      2\nName: patient_id, Length: 2056, dtype: int64"
+      "text/plain": [
+       "IP_4479736    115\n",
+       "IP_4382720    115\n",
+       "IP_7279968    115\n",
+       "IP_4938382    115\n",
+       "IP_0656529    114\n",
+       "             ... \n",
+       "IP_8561849      3\n",
+       "IP_7716626      3\n",
+       "IP_2251085      3\n",
+       "IP_7142641      3\n",
+       "IP_8335299      2\n",
+       "Name: patient_id, Length: 2056, dtype: int64"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -55,16 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "0    98.237034\n1     1.762966\nName: target, dtype: float64"
+      "text/plain": [
+       "0    98.237034\n",
+       "1     1.762966\n",
+       "Name: target, dtype: float64"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -73,22 +194,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(10982, 5)\n"
+     "output_type": "stream",
+     "text": [
+      "(10982, 5)\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "     image_name  patient_id     sex  age_approx anatom_site_general_challenge\n0  ISIC_0052060  IP_3579794    male        70.0                           NaN\n1  ISIC_0052349  IP_7782715    male        40.0               lower extremity\n2  ISIC_0058510  IP_7960270  female        55.0                         torso\n3  ISIC_0073313  IP_6375035  female        50.0                         torso\n4  ISIC_0073502  IP_0589375  female        45.0               lower extremity",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_name</th>\n      <th>patient_id</th>\n      <th>sex</th>\n      <th>age_approx</th>\n      <th>anatom_site_general_challenge</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ISIC_0052060</td>\n      <td>IP_3579794</td>\n      <td>male</td>\n      <td>70.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ISIC_0052349</td>\n      <td>IP_7782715</td>\n      <td>male</td>\n      <td>40.0</td>\n      <td>lower extremity</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ISIC_0058510</td>\n      <td>IP_7960270</td>\n      <td>female</td>\n      <td>55.0</td>\n      <td>torso</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ISIC_0073313</td>\n      <td>IP_6375035</td>\n      <td>female</td>\n      <td>50.0</td>\n      <td>torso</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ISIC_0073502</td>\n      <td>IP_0589375</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>lower extremity</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age_approx</th>\n",
+       "      <th>anatom_site_general_challenge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ISIC_0052060</td>\n",
+       "      <td>IP_3579794</td>\n",
+       "      <td>male</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ISIC_0052349</td>\n",
+       "      <td>IP_7782715</td>\n",
+       "      <td>male</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ISIC_0058510</td>\n",
+       "      <td>IP_7960270</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>torso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ISIC_0073313</td>\n",
+       "      <td>IP_6375035</td>\n",
+       "      <td>female</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>torso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ISIC_0073502</td>\n",
+       "      <td>IP_0589375</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge\n",
+       "0  ISIC_0052060  IP_3579794    male        70.0                           NaN\n",
+       "1  ISIC_0052349  IP_7782715    male        40.0               lower extremity\n",
+       "2  ISIC_0058510  IP_7960270  female        55.0                         torso\n",
+       "3  ISIC_0073313  IP_6375035  female        50.0                         torso\n",
+       "4  ISIC_0073502  IP_0589375  female        45.0               lower extremity"
+      ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 31
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -99,21 +299,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(33126, 9)\n"
+     "output_type": "stream",
+     "text": [
+      "(33126, 9)\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "kfold  target\n-1.0   0         98.219674\n       1          1.780326\n 0.0   0         98.239141\n       1          1.760859\n 1.0   0         98.239141\n       1          1.760859\n 2.0   0         98.238846\n       1          1.761154\n 3.0   0         98.238846\n       1          1.761154\n 4.0   0         98.238846\n       1          1.761154\nName: target, dtype: float64"
+      "text/plain": [
+       "kfold  target\n",
+       "-1.0   0         98.219674\n",
+       "       1          1.780326\n",
+       " 0.0   0         98.239141\n",
+       "       1          1.760859\n",
+       " 1.0   0         98.239141\n",
+       "       1          1.760859\n",
+       " 2.0   0         98.238846\n",
+       "       1          1.761154\n",
+       " 3.0   0         98.238846\n",
+       "       1          1.761154\n",
+       " 4.0   0         98.238846\n",
+       "       1          1.761154\n",
+       "Name: target, dtype: float64"
+      ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 35
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,21 +341,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(33126, 9)\n"
+     "output_type": "stream",
+     "text": [
+      "(33126, 9)\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "kfold  target\n-1.0   0         98.249849\n       1          1.750151\n 0.0   0         98.423612\n       1          1.576388\n 1.0   0         98.473923\n       1          1.526077\n 2.0   0         98.054344\n       1          1.945656\n 3.0   0         97.903388\n       1          2.096612\n 4.0   0         98.322710\n       1          1.677290\nName: target, dtype: float64"
+      "text/plain": [
+       "kfold  target\n",
+       "-1.0   0         98.249849\n",
+       "       1          1.750151\n",
+       " 0.0   0         98.423612\n",
+       "       1          1.576388\n",
+       " 1.0   0         98.473923\n",
+       "       1          1.526077\n",
+       " 2.0   0         98.054344\n",
+       "       1          1.945656\n",
+       " 3.0   0         97.903388\n",
+       "       1          2.096612\n",
+       " 4.0   0         98.322710\n",
+       "       1          1.677290\n",
+       "Name: target, dtype: float64"
+      ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 36
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -164,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
