Commit before 6th train experiment

--- a/src/train_infer_03.ipynb
+++ b/src/train_infer_03.ipynb
@@ -86,6 +86,7 @@
     "ES_PATIENCE = config['early_stopping_patience']\n",
     "REDUCELR_PATIENCE = config['reduce_lr_on_plateau_patience']\n",
     "REDUCELR_FACTOR = config['reduce_lr_on_plateau_factor']\n",
+    "WEIGHT_DECAY = config['weight_decay']\n",
     "# STEP_SIZE = config['steplr_step_size']\n",
     "\n",
     "N_FOLDS = config['n_folds']\n",
@@ -126,7 +127,7 @@
     "    model = timm.create_model(model_name, pretrained=True, num_classes=1)\n",
     "    model.cuda()\n",
     "    \n",
-    "    optim = AdamW(model.parameters(), lr=LR, amsgrad=True)\n",
+    "    optim = AdamW(model.parameters(), lr=LR, weight_decay=WEIGHT_DECAY, amsgrad=True)\n",
     "    # scheduler = StepLR(optim, step_size=STEP_SIZE, gamma=0.3)\n",
     "    scheduler = ReduceLROnPlateau(optim, mode='max', patience=REDUCELR_PATIENCE, verbose=True, factor=REDUCELR_FACTOR)\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
